--- a/package.json
+++ b/package.json
@@ -13,16 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
-    "nodemon": "^3.1.4",
-
-    "react": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
-
+    "nodemon": "^3.1.4"
   }
 }
