--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.4",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "react": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   }
 }
