--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "flowbite-react": "^0.10.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
