i create for get post function to get post for that user and now work it proparly frount end code, backend checked and worked it correctly

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.5",
     "client": "file:",
     "firebase": "^10.12.4",
     "flowbite": "^2.3.0",
